reformatting files using spring java code formatter